--- a/src/features/student_search/StudentSearch.module.css
+++ b/src/features/student_search/StudentSearch.module.css
@@ -1,78 +1,71 @@
-.row {
+/* Colors */
+body {
+  font: 20px 'Ropa Sans', sans-serif;
+  line-height: 20px;
+  letter-spacing: 0.5px;
+  font-weight: bold;
+  background-color: #ffffff;
+}
+body::-webkit-scrollbar {
+  display: none;
+  /* for Chrome, Safari, and Opera */
+}
+.header {
+  grid-area: header;
+  background-color: #162d54;
+}
+.header_flex {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 40px;
+  flex-wrap: nowrap;
 }
-
-.row > button {
-  margin-left: 4px;
-  margin-right: 8px;
+.searchBar {
+  border: 0px;
+  width: 340px;
+  height: 20px;
+  border: 3px solid #ffffff;
+  font: 24px 'Ropa Sans', sans-serif;
+  letter-spacing: 0.5px;
 }
-
-.row:not(:last-child) {
-  margin-bottom: 16px;
-}
-
-.value {
-  font-size: 78px;
-  padding-left: 16px;
-  padding-right: 16px;
-  margin-top: 2px;
-  font-family: 'Courier New', Courier, monospace;
-}
-
-.button {
-  appearance: none;
-  background: none;
-  font-size: 32px;
-  padding-left: 12px;
-  padding-right: 12px;
+.searchBar:focus {
+  border-bottom: 2px solid #00cba5;
   outline: none;
-  border: 2px solid transparent;
-  color: rgb(112, 76, 182);
-  padding-bottom: 4px;
-  cursor: pointer;
-  background-color: rgba(112, 76, 182, 0.1);
-  border-radius: 2px;
-  transition: all 0.15s;
 }
-
-.textbox {
-  font-size: 32px;
-  padding: 2px;
-  width: 64px;
-  text-align: center;
-  margin-right: 4px;
-}
-
-.button:hover,
-.button:focus {
-  border: 2px solid rgba(112, 76, 182, 0.4);
-}
-
-.button:active {
-  background-color: rgba(112, 76, 182, 0.2);
-}
-
-.asyncButton {
-  position: relative;
-}
-
-.asyncButton:after {
-  content: '';
-  background-color: rgba(112, 76, 182, 0.15);
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  opacity: 0;
-  transition: width 1s linear, opacity 0.5s ease 1s;
-}
-
-.asyncButton:active:after {
-  width: 0%;
+.searchBar::placeholder {
+  color: #ddd;
   opacity: 1;
-  transition: 0s;
+  /* For Firefox! */
 }
+.classSelector {
+  border: 0px;
+  height: 20px;
+  border: 3px solid #ffffff;
+  font: 24px 'Ropa Sans', sans-serif;
+  letter-spacing: 0.5px;
+}
+.main {
+  grid-area: main;
+}
+.list {
+  -ms-overflow-style: none;
+  /* for Internet Explorer, Edge */
+  scrollbar-width: none;
+  /* for Firefox */
+  overflow-y: scroll;
+  padding-bottom: 100px;
+  /*TODO: Would've liked to get the scroll-snap behavior to work more cleanly*/
+  scroll-snap-type: y mandatory;
+  scroll-snap-stop: always;
+  /* &::-webkit-scrollbar { */
+  /* display: none; */
+  /* for Chrome */
+  /* } */
+}
+.right {
+  grid-area: right;
+}
+.gridcontainer {
+  display: grid;
+  grid-template-areas: 'header header header header header' 'main main right right right';
+}
+/*# sourceMappingURL=StudentSearch.module.css.map */
