--- a/src/features/student_search/StudentSearch.module.css
+++ b/src/features/student_search/StudentSearch.module.css
@@ -1,6 +1,7 @@
 /* Colors */
 body {
   font: 20px 'Ropa Sans', sans-serif;
+  margin: 0px;
   line-height: 20px;
   letter-spacing: 0.5px;
   font-weight: bold;
@@ -10,43 +11,66 @@ body::-webkit-scrollbar {
   display: none;
   /* for Chrome, Safari, and Opera */
 }
+/* ---Header Sizes--- */
 .header {
-  grid-area: header;
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  height: 54px;
   background-color: #162d54;
 }
 .header_flex {
   display: flex;
-  height: 40px;
+  margin: 14px 28px;
   flex-wrap: nowrap;
 }
+/* ---Header Settings--- */
 .searchBar {
+  display: flex;
+  flex-wrap: nowrap;
+  width: 372px;
+  background-color: #ffffff;
+  border-radius: 5px 0px 0px 5px;
   border: 0px;
+}
+.searchBar .searchIcon {
+  margin: 3px;
+  color: #9b9b9b;
+  width: 18px;
+  height: 18px;
+}
+.searchBar .searchBarInput {
   width: 340px;
   height: 20px;
   border: 3px solid #ffffff;
-  font: 24px 'Ropa Sans', sans-serif;
   letter-spacing: 0.5px;
+  padding: 0px;
 }
-.searchBar:focus {
-  border-bottom: 2px solid #00cba5;
+.searchBar .searchBarInput:focus {
   outline: none;
 }
-.searchBar::placeholder {
-  color: #ddd;
+.searchBar .searchBarInput::placeholder {
+  color: #9b9b9b;
   opacity: 1;
   /* For Firefox! */
 }
 .classSelector {
   border: 0px;
-  height: 20px;
-  border: 3px solid #ffffff;
-  font: 24px 'Ropa Sans', sans-serif;
+  border-radius: 0px 5px 5px 0px;
+  width: 120px;
+  height: 26px;
   letter-spacing: 0.5px;
 }
-.main {
-  grid-area: main;
+.classSelector:focus {
+  outline: none;
 }
-.list {
+.main {
+  margin-top: 68px;
+}
+/* ---Student div settings ---*/
+.studentList {
+  display: table;
+  margin: 14px 28px;
   -ms-overflow-style: none;
   /* for Internet Explorer, Edge */
   scrollbar-width: none;
@@ -61,11 +85,30 @@ body::-webkit-scrollbar {
   /* for Chrome */
   /* } */
 }
-.right {
-  grid-area: right;
+.studentList .studentTile {
+  transition: ease height 0.2s;
+  display: table-row;
+  height: 30px;
 }
-.gridcontainer {
-  display: grid;
-  grid-template-areas: 'header header header header header' 'main main right right right';
+.studentList .studentTile:hover {
+  background-color: #eff1f6;
+}
+.studentList .studentTile .studentName {
+  vertical-align: middle;
+  display: table-cell;
+  width: 240px;
+}
+.studentList .studentTile .studentClassList {
+  vertical-align: middle;
+  display: table-cell;
+  font: 14px 'Ropa Sans', sans-serif;
+  width: 240px;
+  color: #9b9b9b;
+}
+.studentList .studentTileHidden {
+  transition: ease height 0.2s;
+  height: 0px;
+  border: none;
+  overflow: hidden;
 }
 /*# sourceMappingURL=StudentSearch.module.css.map */
